--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
+    "sweetalert": "^2.1.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
