--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-VITE_BASE_URL=http://localhost:5000/api/
+VITE_BASE_URL=http://localhost:8080/api/
+# адрес для подключения через docker-compose 
+# VITE_BASE_URL=http://host.docker.internal:8080/api/
+
+
